- Alteracoes na landing de ecommerce

--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -8,19 +8,18 @@ is_index: true
   <div class="container">
     <div class="hero-content">
       <h1 class="text1">Construa seu e-commerce </br>com quem entende.</h1>
-      <h5 class="text2">Somos a empresa que mais entregou projetos de comércio</br>eletrônico e mobile commerce no Brasil.
-      
+      <h5 class="text2">Somos a empresa que mais entregou projetos de e-commerce no Brasil.</h5>
       <div class="newsletter">
         <form action="//concretesolutions.us5.list-manage.com/subscribe/post?u=0dd8265cc74731cec0c149863&amp;id=68c6a69e52" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="form-inline validate" target="_blank" novalidate>
           <div class="form-group mc-field-group">
             <label class="sr-only" for="mce-EMAIL">Email</label>
-            <input type="text" name="EMAIL" id="mce-EMAIL" class="form-control" placeholder="digite seu email" autocomplete="off">
+            <input type="text" name="EMAIL" id="mce-EMAIL" class="form-control" placeholder="digite seu e-mail" autocomplete="off">
           </div> 
           <button type="submit" id="mc-embedded-subscribe" class="btn btn-default">Quero saber mais</button>         
           <div style="position: absolute; left: -5000px;"><input type="text" name="b_0dd8265cc74731cec0c149863_26dd60f3a9" tabindex="-1" value=""></div>
           <div id="mce-responses" class="clear">
-            <div class="response" id="mce-error-response" style="display:none"></div>
-            <div class="response" id="mce-success-response" style="display:none"></div>
+            <div class="response-error col-md-6" id="mce-error-response" style="display:none"></div>
+            <div class="response-success col-md-6" id="mce-success-response" style="display:none"></div>
           </div>
         </form>
       </div>
@@ -28,29 +27,23 @@ is_index: true
   </div>
 </section>
 <section id="how-we-do">
-  <div class="divisoria"></div>
   <div class="container">
-   
     <div class="banner-master JS-banner" id="banner-descobrir" style="display: block">
-      <h3 class="title">Especialistas em Mobile Commerce e</br> Varejo multicanal</h3></h3>
+      <h3 class="title">Especialistas em Varejo multicanal</h3></h3>
       <div class="bloco">
-          <p class="text-banner-master">
-          </br>
-          Projetamos, desenvolvemos, entregamos e gerenciamos sua API, criando a melhor experiência para que seu cliente possa comprar de forma facilitada pelo celular, tablet ou no computador.
-           
-          </p>
+          <p class="text-banner-master">Projetamos, desenvolvemos, entregamos e gerenciamos sua API, criando a melhor experiência de compra para seu cliente.</p>
       </div>
     </div>
     <div id="conteudo">
       <section id="descobrir">      
         <div class="row">
-        <div class="view col-md-4 item-3">
-            <h3>Melhores Práticas</h3>
+        <div class="view col-md-4 item-1">
+            <h3>Integração</h3>
             <div class="mask color2">  
-                <p class="text2">Juntamos suas ferramentas com uso de ​arquitetura ​orientada a ​serviços, que dá ​robustez​ às diversas​ transações do seu negócio.</p>
+                <p class="text2">Juntamos suas ferramentas com uso de ​arquitetura ​orientada a ​serviços que dá ​robustez​ às diversas​ transações do seu negócio.</p>
             </div>  
           </div>
-          <div class="view col-md-4 item-5">
+          <div class="view col-md-4 item-2">
             <h3>Sustentação</h3>
             <div class="mask color2">  
                 <p class="text2">Gerenciamento ágil de demandas e disposição para ambientes críticos.</p>
@@ -63,18 +56,18 @@ is_index: true
             </div>  
           </div>
           <div class="view col-md-4 item-4">
-            <h3>Sucesso baseado em</br> Métricas</h3>
+            <h3>Sucesso empírico</h3>
             <div class="mask color2">  
-                <p class="text2">Usamos técnicas de webmarketing, como Google Adwords, SEO, Google Analytics, Testes A/B, etc.</p>
+                <p class="text2">Usamos técnicas de webmarketing baseadas em métricas, como Google Adwords, SEO, Google Analytics, Testes A/B, etc.</p>
             </div>  
           </div>
-          <div class="view col-md-4 item-2">
-            <h3 class="white">Não importa a</br>tecnologia</h3>
+          <div class="view col-md-4 item-5">
+            <h3>Não importa a</br>tecnologia</h3>
             <div class="mask color2 ">  
                 <p class="text2">Fazemos projetos de implantação de comércio eletrônico usando a tecnologia que for melhor pra você, seja PHP, Java, .NET, Python ou Ruby.</p>
             </div>  
           </div>
-          <div class="view col-md-4 item-5">
+          <div class="view col-md-4 item-6">
             <h3>De acordo com sua</br> necessidade</h3>
             <div class="mask color2">  
                 <p class="text2">Ajudamos a identificar e implantar a melhor ferramenta e modelo para ​varejistas iniciantes ou consolidados no mercado.</p> 
@@ -88,43 +81,102 @@ is_index: true
 <section id="cases" class="content-cases">
   <header>
     <div class="container">
-      <h1>Nossos Cases</h1>
+      <h1>Cases</h1>
     </div>
   </header>
-  <div class="depoimento">
-    <div class="container JS-depoimentoTexto" id="divDafiti" style="display:block;">
-      <p>“A Concrete Solutions teve que compreender o cenário em que estávamos e enfrentar um nível de exigência muito alto dos sócios. Adotamos, então, um modelo de discussões frequentes de usabilidade, técnica e prioridades, envolvendo toda a equipe de TI e marketing. Em toda a minha vida profissional nunca tive algo tão agressivo e de resultados tão concretos nas mãos. Nosso grau de satisfação com o resultado é muito bom”.</p>
-      <p class="autor">Roberto Heingst, gerente de TI da Dafiti.</p>
-    </div>
-    <div class="container JS-depoimentoTexto" id="divMontacasa" style="display:none;">
-      <p>“Aprendemos a entender o comportamento do consumidor e a não construir nada que você não tenha ideia se vai ser útil, não gastar para construir antes de testar, testar com o mínimo possível, etc. Tiramos grandes lições desta parceria, além é claro, de ganhar em dinamismo. Na primeira semana já sentimos mudanças internas e mais facilidade nas tomadas de decisão.”</p>
-      <p class="autor">Caroline Dias, CEO do Montacasa</p>
-    </div>
-    <div class="container JS-depoimentoTexto" id="divTricae" style="display:none;">
-      <p>“Quando percebemos uma tendência de aumento das visitas no nosso site via celular, entendemos que era preciso fazer um aplicativo para otimizar a experiência do usuário e gerar mais leads. Conhecemos a Concrete Solutions em abril, fechamos negócio em maio e em agosto lançamos nossos aplicativos para Android e iOS. Acredito que a expertise do time, que é bastante sólido e conhece bem o negócio de e-commerce, gerou uma grande agilidade, que foi essencial para o projeto. Recomendo.”</p>
-      <p class="autor">Caio Motta, Founder da Tricae.</p>
-    </div>
-  </div>
-  <div class="container">
+  <div>
+    <div class="container">
     <div class="fixed-bar">
       <!-- Elastislide Carousel -->
       <ul id="carousel" class="elastislide-list">
-        <li class="client"><a><img src="/img/case_logo_americanas.png" alt="Lojas Americanas" /></a></li>
-        <li><a related-div="#divDafiti" class="JS-depoimento"><img src="/img/dafiti-logo.png" alt="Dafiti" /></a></li>
-        <li><a><img src="/img/case_logo_casaevideo.png" alt="Casa e Vídeo" /></a></li>
-        <li><a><img src="/img/case_logo_osklen.png" alt="Osklen" /></a></li></br></br>
-        <li><a related-div="#divMontacasa" class="JS-depoimento"><img src="/img/montacasa-logo.png" alt="Montacasa" /></a></li>  
-        <li><a related-div="#divTricae" class="JS-depoimento"><img src="/img/tricae-logo.png" alt="Tricae" /></a></li>
-        <li><a><img src="/img/kanui-logo.png" alt="Kanui" /></a></li>
-        <li><a><img src="/img/dufry-logo.png" alt="Dufry" /></a></li>
-              </ul></br>
+        <li><a related-div="#divDafiti" class="JS-depoimento"><img src="/img/ecommerce/dafiti-logo.png" alt="Dafiti" /></a></li>
+        <li><a related-div="#divOsklen" class="JS-depoimento"><img src="/img/ecommerce/osklen-logo.png" alt="Osklen" /></a></li>
+        <li><a related-div="#divDufry" class="JS-depoimento"><img src="/img/ecommerce/dufry-logo.png" alt="Dufry" /></a></li>
+        <li><img src="/img/ecommerce/casaevideo-logo.png" alt="Casa e Vídeo" /></li>
+        <li><img src="/img/ecommerce/comprafacil-logo.png" alt="Compra Fácil" /></li>
+        <li><img src="/img/ecommerce/magazineluiza-logo.png" alt="Magazine Luiza" /></li>
+        <li><img src="/img/ecommerce/mercadolivre-logo.png" alt="Mercado Livre" /></li>
+        <li><img src="/img/ecommerce/wine-logo.png" alt="Wine.com" /></li>
+        <li><a related-div="#divMontacasa" class="JS-depoimento"><img src="/img/ecommerce/montacasa-logo.png" alt="Montacasa" /></a></li>
+        <li><a related-div="#divTricae" class="JS-depoimento"><img src="/img/ecommerce/tricae-logo.png" alt="Tricae" /></a></li>
+        <li><a related-div="#divKanui" class="JS-depoimento"><img src="/img/ecommerce/kanui-logo.png" alt="Kanui" /></a></li>
+        <li><a related-div="#divChefTV" class="JS-depoimento"><img src="/img/ecommerce/cheftvshop-logo.png" alt="Chef TV" /></a></li>
       <!-- End Elastislide Carousel -->
     </div>
   </div>
-  <header>
-    <div class="container">
-      <h1>Nossos Parceiros</h1></br>
-      <img src="/img/logos_parceiros.png" alt="Parceiros Concrete Solutions" /></br></br></br>
+    <div class="container JS-depoimentoTexto" id="divDafiti" style="display:block;">
+      <div class="problema col-md-6"><h4>Desafio</h4>Estruturar uma célula de desenvolvimento de produtos mobile para atender a demanda de mobile commerce da empresa.</div>
+      <div class="solucao col-md-6"><h4>Solução</h4>Utilizando as melhores práticas de desenvolvimento e gestão de produtos digitais do mercado, ajudamos o time da Dafiti a re-escrever os aplicativos iOS e Android, aumentando as vendas.</div>
+      <div class="depoimento">
+          <p>“A Concrete Solutions teve que compreender o cenário em que estávamos e enfrentar um nível de exigência muito alto dos sócios. Adotamos, então, um modelo de discussões frequentes de usabilidade, técnica e prioridades, envolvendo toda a equipe de TI e marketing. Em toda a minha vida profissional nunca tive algo tão agressivo e de resultados tão concretos nas mãos. Nosso grau de satisfação com o resultado é muito bom”.</p>
+          <p class="autor">Roberto Heingst, gerente de TI da Dafiti.</p>
+      </div>
     </div>
-  </header>
-</section>
+    <div class="container JS-depoimentoTexto" id="divOsklen" style="display:none;">
+      <div class="problema col-md-6"><h4>Desafio</h4>Ajudar a Osklen a implementar, de forma mais dinâmica e segura, as diversas necessidades que o ramo da Moda exige.</div>
+      <div class="solucao col-md-6"><h4>Solução</h4>Recriamos toda a infra-estrutura Magento na AWS e entregamos diversas melhorias, tanto no front-end quanto no back-end, que facilitassem o backoffice da loja on-line.</div>
+      <div class="depoimento">
+        <p>“Entregas sólidas, equipe super-solícita, acompanhamento de trabalho ativo e constante. Mudou a minha percepção de excelência em desenvolvimento de projetos Magento.”</p>
+        <p class="autor">Leonardo Rodrigues, Gerente de Mídias Digitais da Osklen.</p>
+      </div>
+    </div>
+    <div class="container JS-depoimentoTexto" id="divDufry" style="display:none;">
+      <div class="problema col-md-6"><h4>Desafio</h4>Modernizar a plataforma de Comércio Eletrônico para um negócio diferenciado como DutyFree e juntamente integrar os sistemas de gestão com catálogo, estoque, preço e pedidos.</div>
+      <div class="solucao col-md-6"><h4>Solução</h4>Implantamos a plataforma de e-commerce ElasticPath e o App iOS nativo, customizando o checkout para os diferentes requisitos que o negócio envolve, além de integrar toda a solução com os sistemas de gestão através do Oracle Middleware em arquitetura SOA.</div>
+      <div class="depoimento">
+        <p>“Com a ajuda do time da Concrete Solutions, conseguimos uma loja implantada em uma solução mais moderna, mais robusta e com mais facilidades para nossos negócios de e-ecommerce, que em pouco mais de quatro meses de operação bateu recorde de pedidos nos aeroportos do Brasil.”</p>
+        <p class="autor">Mário Portela, Diretor de Marketing da Dufry Brasil.</p>
+      </div>
+    </div>
+    <div class="container JS-depoimentoTexto" id="divMontacasa" style="display:none;">
+      <div class="problema col-md-6"><h4>Desafio</h4>Ajudar uma startup a descobrir e executar o seu modelo de negócios e re-implementar a sua plataforma de e-commerce para Magento para obter mais vendas.</div>
+      <div class="solucao col-md-6"><h4>Solução</h4>Através de práticas como validação de hipóteses, product e customer discovery, levar o e-commerce do grupo ao nível de vendas que possui hoje.</div>
+      <div class="depoimento">
+        <p>“Aprendemos a entender o comportamento do consumidor e a não construir nada que você não tenha idéia se vai ser útil, não gastar para construir antes de testar, testar com o mínimo possível, etc. Tiramos grandes lições desta parceria, além é claro, de ganhar em dinamismo. Na primeira semana já sentimos mudanças internas e mais facilidade nas tomadas de decisão.”</p>
+        <p class="autor">Caroline Dias, CEO do Montacasa</p>
+      </div>
+    </div>
+    <div class="container JS-depoimentoTexto" id="divTricae" style="display:none;">
+      <div class="problema col-md-6"><h4>Desafio</h4>Ajudar um grande varejista do mercado infantil a entrar no mercado de mobile commerce.</div>
+      <div class="solucao col-md-6"><h4>Solução</h4>Implementamos uma API e aplicativos para iPhone, iPad e Android ajudando a Tricae a se destacar no mundo do mobile commerce.</div>
+      <div class="depoimento">
+        <p>“Quando percebemos uma tendência de aumento das visitas no nosso site via celular, entendemos que era preciso fazer um aplicativo para otimizar a experiência do usuário e gerar mais leads. Conhecemos a Concrete Solutions em abril, fechamos negócio em maio e em agosto lançamos nossos aplicativos para Android e iOS. Acredito que a expertise do time, que é bastante sólido e conhece bem o negócio de e-commerce, gerou uma grande agilidade, que foi essencial para o projeto. Recomendo.”</p>
+        <p class="autor">Caio Motta, Founder da Tricae.</p>
+      </div>
+    </div>
+    <div class="container JS-depoimentoTexto" id="divKanui" style="display:none;">
+      <div class="problema col-md-6"><h4>Desafio</h4>Ajudar um grande varejista do mercado de moda esportiva a entrar no mercado de mobile commerce.</div>
+      <div class="solucao col-md-6"><h4>Solução</h4>Implementamos uma API e aplicativos para iPhone, iPad e Android ajudando a Kanui a se destacar no mundo do mobile commerce.</div>
+      <div class="depoimento">
+        <p></p>
+        <p class="autor"></p>
+      </div>
+    </div>
+    <div class="container JS-depoimentoTexto" id="divChefTV" style="display:none;">
+      <div class="problema col-md-6"><h4>Desafio</h4>Como lançar um comércio eletrônico para uma startup com esforço, prazo e orçamento reduzidos sem perder qualidade?</div>
+      <div class="solucao col-md-6"><h4>Solução</h4>Ajudamos o time a modelar o produto e entregamos a engenharia para a entrada em produção envolvendo o desenvolvimento, infra-estrutura, a preparação do conteúdo e a operação da loja em Magento.</div>
+      <div class="depoimento">
+        <p>“O time da Concrete Solutions se adaptou a exatamente o que precisávamos. Esta flexibilidade ajudou muito a melhorar nossa presença, que já era forte na TV, também na Internet. Como uma startup, nossa estratégia multicanal teve de ser financiada com baixo custo, sem afetar a qualidade ou o tempo de chegada ao mercado. A decisão de usar a nuvem AWS, indicação da Concrete Solutions, fez toda a diferença neste sentido.”</p>
+        <p class="autor">Amílcar Chaves, CEO da Chef TV.</p>
+      </div>
+    </div>
+  </div>
+  </section>
+  <section id="partners" class="content-partners">
+    <div class="container">
+      <header>
+        <div class="container">
+          <h1>Parceiros</h1>
+        </div>
+      </header>
+      <div class="partners-image">
+        <!--<img src="/img/logos_parceiros.png" alt="Parceiros Concrete Solutions" /></br></br></br>-->
+        <div class="parceiro col-md-2"><img src="/img/ecommerce/oracle-logo.png"title="Oracle"/></div>
+        <div class="parceiro col-md-2"><img src="/img/ecommerce/ibm-logo.png"title="IBM"/></div>
+        <div class="parceiro col-md-2"><img src="/img/ecommerce/magento-logo.png"title="Magento"/></div>
+        <div class="parceiro col-md-2"><img src="/img/ecommerce/elasticpath-logo.png"title="Elastic Path"/></div>
+        <div class="parceiro col-md-2"><img src="/img/ecommerce/microsoft-logo.png"title="Microsoft"/></div>
+        <div class="parceiro col-md-2"><img src="/img/ecommerce/amazon-logo.png"title="Amazon AWS"/></div>
+      </div>
+    </div>
+  </section> 
