- redução do tamanho do campo de news pra caber no iphone5; - aumento do tamanho da fonte de retorno do submit de optin - ajuste de responsividade da logo para iphone5 (320px) - conserto das palavras infra-estrutura para infraestrutura.

--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -114,7 +114,7 @@ is_index: true
     </div>
     <div class="container JS-depoimentoTexto" id="divOsklen" style="display:none;">
       <div class="problema col-md-6"><h4>Desafio</h4>Ajudar a Osklen a implementar, de forma mais dinâmica e segura, as diversas necessidades que o ramo da Moda exige.</div>
-      <div class="solucao col-md-6"><h4>Solução</h4>Recriamos toda a infra-estrutura Magento na AWS e entregamos diversas melhorias, tanto no front-end quanto no back-end, que facilitassem o backoffice da loja on-line.</div>
+      <div class="solucao col-md-6"><h4>Solução</h4>Recriamos toda a infraestrutura Magento na AWS e entregamos diversas melhorias, tanto no front-end quanto no back-end, que facilitassem o backoffice da loja on-line.</div>
       <div class="depoimento">
         <p>“Entregas sólidas, equipe super-solícita, acompanhamento de trabalho ativo e constante. Mudou a minha percepção de excelência em desenvolvimento de projetos Magento.”</p>
         <p class="autor">Leonardo Rodrigues, Gerente de Mídias Digitais da Osklen.</p>
@@ -154,7 +154,7 @@ is_index: true
     </div>
     <div class="container JS-depoimentoTexto" id="divChefTV" style="display:none;">
       <div class="problema col-md-6"><h4>Desafio</h4>Como lançar um comércio eletrônico para uma startup com esforço, prazo e orçamento reduzidos sem perder qualidade?</div>
-      <div class="solucao col-md-6"><h4>Solução</h4>Ajudamos o time a modelar o produto e entregamos a engenharia para a entrada em produção envolvendo o desenvolvimento, infra-estrutura, a preparação do conteúdo e a operação da loja em Magento.</div>
+      <div class="solucao col-md-6"><h4>Solução</h4>Ajudamos o time a modelar o produto e entregamos a engenharia para a entrada em produção envolvendo o desenvolvimento, infraestrutura, a preparação do conteúdo e a operação da loja em Magento.</div>
       <div class="depoimento">
         <p>“O time da Concrete Solutions se adaptou a exatamente o que precisávamos. Esta flexibilidade ajudou muito a melhorar nossa presença, que já era forte na TV, também na Internet. Como uma startup, nossa estratégia multicanal teve de ser financiada com baixo custo, sem afetar a qualidade ou o tempo de chegada ao mercado. A decisão de usar a nuvem AWS, indicação da Concrete Solutions, fez toda a diferença neste sentido.”</p>
         <p class="autor">Amílcar Chaves, CEO da Chef TV.</p>
