- Inclusão dos robots.txt - inclusão de meta para google verification e robots index/follow - ajustes palavras nos cases de ecommerce

--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -106,7 +106,7 @@ is_index: true
   </div>
     <div class="container JS-depoimentoTexto" id="divDafiti" style="display:block;">
       <div class="problema col-md-6"><h4>Desafio</h4>Estruturar uma célula de desenvolvimento de produtos mobile para atender a demanda de mobile commerce da empresa.</div>
-      <div class="solucao col-md-6"><h4>Solução</h4>Utilizando as melhores práticas de desenvolvimento e gestão de produtos digitais do mercado, ajudamos o time da Dafiti a re-escrever os aplicativos iOS e Android, aumentando as vendas.</div>
+      <div class="solucao col-md-6"><h4>Solução</h4>Utilizando as melhores práticas de desenvolvimento e gestão de produtos digitais do mercado, ajudamos o time da Dafiti a reescrever os aplicativos iOS e Android, aumentando as vendas.</div>
       <div class="depoimento">
           <p>“A Concrete Solutions teve que compreender o cenário em que estávamos e enfrentar um nível de exigência muito alto dos sócios. Adotamos, então, um modelo de discussões frequentes de usabilidade, técnica e prioridades, envolvendo toda a equipe de TI e marketing. Em toda a minha vida profissional nunca tive algo tão agressivo e de resultados tão concretos nas mãos. Nosso grau de satisfação com o resultado é muito bom”.</p>
           <p class="autor">Roberto Heingst, gerente de TI da Dafiti.</p>
@@ -121,7 +121,7 @@ is_index: true
       </div>
     </div>
     <div class="container JS-depoimentoTexto" id="divDufry" style="display:none;">
-      <div class="problema col-md-6"><h4>Desafio</h4>Modernizar a plataforma de Comércio Eletrônico para um negócio diferenciado como DutyFree e juntamente integrar os sistemas de gestão com catálogo, estoque, preço e pedidos.</div>
+      <div class="problema col-md-6"><h4>Desafio</h4>Modernizar a plataforma de Comércio Eletrônico para um negócio diferenciado como DutyFree e integrar os sistemas de gestão com catálogo, estoque, preço e pedidos.</div>
       <div class="solucao col-md-6"><h4>Solução</h4>Implantamos a plataforma de e-commerce ElasticPath e o App iOS nativo, customizando o checkout para os diferentes requisitos que o negócio envolve, além de integrar toda a solução com os sistemas de gestão através do Oracle Middleware em arquitetura SOA.</div>
       <div class="depoimento">
         <p>“Com a ajuda do time da Concrete Solutions, conseguimos uma loja implantada em uma solução mais moderna, mais robusta e com mais facilidades para nossos negócios de e-ecommerce, que em pouco mais de quatro meses de operação bateu recorde de pedidos nos aeroportos do Brasil.”</p>
@@ -129,7 +129,7 @@ is_index: true
       </div>
     </div>
     <div class="container JS-depoimentoTexto" id="divMontacasa" style="display:none;">
-      <div class="problema col-md-6"><h4>Desafio</h4>Ajudar uma startup a descobrir e executar o seu modelo de negócios e re-implementar a sua plataforma de e-commerce para Magento para obter mais vendas.</div>
+      <div class="problema col-md-6"><h4>Desafio</h4>Ajudar uma startup a descobrir e executar o seu modelo de negócios e reimplementar a sua plataforma de e-commerce para Magento para obter mais vendas.</div>
       <div class="solucao col-md-6"><h4>Solução</h4>Através de práticas como validação de hipóteses, product e customer discovery, levar o e-commerce do grupo ao nível de vendas que possui hoje.</div>
       <div class="depoimento">
         <p>“Aprendemos a entender o comportamento do consumidor e a não construir nada que você não tenha idéia se vai ser útil, não gastar para construir antes de testar, testar com o mínimo possível, etc. Tiramos grandes lições desta parceria, além é claro, de ganhar em dinamismo. Na primeira semana já sentimos mudanças internas e mais facilidade nas tomadas de decisão.”</p>
@@ -153,7 +153,7 @@ is_index: true
       </div>
     </div>
     <div class="container JS-depoimentoTexto" id="divChefTV" style="display:none;">
-      <div class="problema col-md-6"><h4>Desafio</h4>Como lançar um comércio eletrônico para uma startup com esforço, prazo e orçamento reduzidos sem perder qualidade?</div>
+      <div class="problema col-md-6"><h4>Desafio</h4>Lançar um comércio eletrônico para uma startup com esforço, prazo e orçamento reduzidos sem perder qualidade.</div>
       <div class="solucao col-md-6"><h4>Solução</h4>Ajudamos o time a modelar o produto e entregamos a engenharia para a entrada em produção envolvendo o desenvolvimento, infraestrutura, a preparação do conteúdo e a operação da loja em Magento.</div>
       <div class="depoimento">
         <p>“O time da Concrete Solutions se adaptou a exatamente o que precisávamos. Esta flexibilidade ajudou muito a melhorar nossa presença, que já era forte na TV, também na Internet. Como uma startup, nossa estratégia multicanal teve de ser financiada com baixo custo, sem afetar a qualidade ou o tempo de chegada ao mercado. A decisão de usar a nuvem AWS, indicação da Concrete Solutions, fez toda a diferença neste sentido.”</p>
