- Mudança de Titulo - inclusão de link canonical - inclusão de idioma no cabeçalho do html - inclusão de cases: casa e video, comprafacil e mercado livre.

--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -92,10 +92,10 @@ is_index: true
         <li><a related-div="#divDafiti" class="JS-depoimento"><img src="/img/ecommerce/dafiti-logo.png" alt="Dafiti" /></a></li>
         <li><a related-div="#divOsklen" class="JS-depoimento"><img src="/img/ecommerce/osklen-logo.png" alt="Osklen" /></a></li>
         <li><a related-div="#divDufry" class="JS-depoimento"><img src="/img/ecommerce/dufry-logo.png" alt="Dufry" /></a></li>
-        <li><img src="/img/ecommerce/casaevideo-logo.png" alt="Casa e Vídeo" /></li>
-        <li><img src="/img/ecommerce/comprafacil-logo.png" alt="Compra Fácil" /></li>
+        <li><a related-div="#divCasaeVideo" class="JS-depoimento"><img src="/img/ecommerce/casaevideo-logo.png" alt="Casa e Vídeo" /></a></li>
+        <li><a related-div="#divCompraFacil" class="JS-depoimento"><img src="/img/ecommerce/comprafacil-logo.png" alt="Compra Fácil" /></a></li>
         <li><img src="/img/ecommerce/magazineluiza-logo.png" alt="Magazine Luiza" /></li>
-        <li><img src="/img/ecommerce/mercadolivre-logo.png" alt="Mercado Livre" /></li>
+        <li><a related-div="#divMercadoLivre" class="JS-depoimento"><img src="/img/ecommerce/mercadolivre-logo.png" alt="Mercado Livre" /></a></li>
         <li><img src="/img/ecommerce/wine-logo.png" alt="Wine.com" /></li>
         <li><a related-div="#divMontacasa" class="JS-depoimento"><img src="/img/ecommerce/montacasa-logo.png" alt="Montacasa" /></a></li>
         <li><a related-div="#divTricae" class="JS-depoimento"><img src="/img/ecommerce/tricae-logo.png" alt="Tricae" /></a></li>
@@ -105,8 +105,8 @@ is_index: true
     </div>
   </div>
     <div class="container JS-depoimentoTexto" id="divDafiti" style="display:block;">
-      <div class="problema col-md-6"><h4>Desafio</h4>Estruturar uma célula de desenvolvimento de produtos mobile para atender a demanda de mobile commerce da empresa.</div>
-      <div class="solucao col-md-6"><h4>Solução</h4>Utilizando as melhores práticas de desenvolvimento e gestão de produtos digitais do mercado, ajudamos o time da Dafiti a reescrever os aplicativos iOS e Android, aumentando as vendas.</div>
+      <div class="problema col-md-6"><h4>Desafio</h4>Implementar a cultura ágil em um ambiente de grande volatilidade e crescimento em pouco tempo, além de entender e utilizar uma plataforma de e-commerce desenvolvida na matriz e desenvolver uma API Rest para integração da cadeia de valor, sempre atendendo os critérios de performance e qualidade da empresa.</div>
+      <div class="solucao col-md-6"><h4>Solução</h4>Utilizamos as melhores práticas de desenvolvimento e gestão de produtos digitais do mercado, como LAMP, SOLR e Scrum/Kanban, ajudamos o time da Dafiti a reescrever os aplicativos iOS e Android, aumentando as vendas.</div>
       <div class="depoimento">
           <p>“A Concrete Solutions teve que compreender o cenário em que estávamos e enfrentar um nível de exigência muito alto dos sócios. Adotamos, então, um modelo de discussões frequentes de usabilidade, técnica e prioridades, envolvendo toda a equipe de TI e marketing. Em toda a minha vida profissional nunca tive algo tão agressivo e de resultados tão concretos nas mãos. Nosso grau de satisfação com o resultado é muito bom”.</p>
           <p class="autor">Roberto Heingst, gerente de TI da Dafiti.</p>
@@ -121,16 +121,28 @@ is_index: true
       </div>
     </div>
     <div class="container JS-depoimentoTexto" id="divDufry" style="display:none;">
-      <div class="problema col-md-6"><h4>Desafio</h4>Modernizar a plataforma de Comércio Eletrônico para um negócio diferenciado como DutyFree e integrar os sistemas de gestão com catálogo, estoque, preço e pedidos.</div>
-      <div class="solucao col-md-6"><h4>Solução</h4>Implantamos a plataforma de e-commerce ElasticPath e o App iOS nativo, customizando o checkout para os diferentes requisitos que o negócio envolve, além de integrar toda a solução com os sistemas de gestão através do Oracle Middleware em arquitetura SOA.</div>
+      <div class="problema col-md-6"><h4>Desafio</h4>Desenvolver uma solução de comércio eletrônico customizável e interligada com o legado de sistemas de gestão Dufry, como catálogo, estoque, preço e pedidos, de forma congruente com a estratégia geral da empresa nos canais web e mobile.</div>
+      <div class="solucao col-md-6"><h4>Solução</h4>Implantamos a plataforma de e-commerce ElasticPath e o App iOS nativo, customizando o checkout para diferentes requisitos, além de integrar toda a solução com os sistemas de gestão com o Oracle Middleware em arquitetura SOA.</div>
       <div class="depoimento">
         <p>“Com a ajuda do time da Concrete Solutions, conseguimos uma loja implantada em uma solução mais moderna, mais robusta e com mais facilidades para nossos negócios de e-ecommerce, que em pouco mais de quatro meses de operação bateu recorde de pedidos nos aeroportos do Brasil.”</p>
         <p class="autor">Mário Portela, Diretor de Marketing da Dufry Brasil.</p>
       </div>
     </div>
+    <div class="container JS-depoimentoTexto" id="divCasaeVideo" style="display:none;">
+      <div class="problema col-md-6"><h4>Desafio</h4>Cinco picos de demanda anuais geravam grande instabilidade na loja, prejudicando o faturamento. A loja precisava de um sistema que pudesse atender a grande demanda em períodos de pico.</div>
+      <div class="solucao col-md-6"><h4>Solução</h4>Com implantação de um cloud privado dentro da Amazon AWS e uso de ferramental Oracle Middleware, implantamos monitoramento ativo e autoescalabilidade da infraestrutura, com cacheamento via Amazon S3.</div>
+    </div>
+    <div class="container JS-depoimentoTexto" id="divCompraFacil" style="display:none;">
+      <div class="problema col-md-6"><h4>Desafio</h4>Criar um novo canal de vendas para uma das maiores varejistas via catálogo do país, viabilizando uma estratégia de vendas multicanal e a integração com a plataforma da loja. Outro desafio era reduzir custos e dar flexibilidade ao time de marketing.</div>
+      <div class="solucao col-md-6"><h4>Solução</h4>Com o uso de middleware RoR, Amazon AWS e aplicações nativas, criamos todos os canais móveis (iPhone, iPad e Android para smartphones e tablets) com perfeita integração para que o usuário tivesse uma boa experiência em qualquer canal que desejasse.</div>
+    </div>
+    <div class="container JS-depoimentoTexto" id="divMercadoLivre" style="display:none;">
+      <div class="problema col-md-6"><h4>Desafio</h4>Fazer a integração entre a maior plataforma de comércio eletrônico da América Latina e três lojas do portfólio da Rocket, com grande velocidade de crescimento: Tricae, Kanui e Mobly. Requisitos não funcionais complexos e grande volume de dados.</div>
+      <div class="solucao col-md-6"><h4>Solução</h4>Por meio de APIs Rest, desenvolvimento PHP, infraestrutura LAMP, integração contínua e testes, conseguimos fazer a integração com sucesso em apenas três meses.</div>
+    </div>
     <div class="container JS-depoimentoTexto" id="divMontacasa" style="display:none;">
-      <div class="problema col-md-6"><h4>Desafio</h4>Ajudar uma startup a descobrir e executar o seu modelo de negócios e reimplementar a sua plataforma de e-commerce para Magento para obter mais vendas.</div>
-      <div class="solucao col-md-6"><h4>Solução</h4>Através de práticas como validação de hipóteses, product e customer discovery, levar o e-commerce do grupo ao nível de vendas que possui hoje.</div>
+      <div class="problema col-md-6"><h4>Desafio</h4>O marketplace de objetos de decoração tinha problemas com programação terceirizada, o que atrapalhava ajustes rápidos e impactava no faturamento.</div>
+      <div class="solucao col-md-6"><h4>Solução</h4>Por meio de práticas ágeis como validação de hipóteses, product e customer discovery, levamos o e-commerce do grupo a um nível maior de vendas e faturamento, facilitando mudanças internas e tomadas de decisão.</div>
       <div class="depoimento">
         <p>“Aprendemos a entender o comportamento do consumidor e a não construir nada que você não tenha idéia se vai ser útil, não gastar para construir antes de testar, testar com o mínimo possível, etc. Tiramos grandes lições desta parceria, além é claro, de ganhar em dinamismo. Na primeira semana já sentimos mudanças internas e mais facilidade nas tomadas de decisão.”</p>
         <p class="autor">Caroline Dias, CEO do Montacasa</p>
@@ -153,7 +165,7 @@ is_index: true
       </div>
     </div>
     <div class="container JS-depoimentoTexto" id="divChefTV" style="display:none;">
-      <div class="problema col-md-6"><h4>Desafio</h4>Lançar um comércio eletrônico para uma startup com esforço, prazo e orçamento reduzidos sem perder qualidade.</div>
+      <div class="problema col-md-6"><h4>Desafio</h4>Montar um time multidisciplinar que ajudasse a ChefTV a desenvolver três iniciativas diferentes ao mesmo tempo: um portal de conteúdo, uma loja virtual e um aplicativo para iPad.</div>
       <div class="solucao col-md-6"><h4>Solução</h4>Ajudamos o time a modelar o produto e entregamos a engenharia para a entrada em produção envolvendo o desenvolvimento, infraestrutura, a preparação do conteúdo e a operação da loja em Magento.</div>
       <div class="depoimento">
         <p>“O time da Concrete Solutions se adaptou a exatamente o que precisávamos. Esta flexibilidade ajudou muito a melhorar nossa presença, que já era forte na TV, também na Internet. Como uma startup, nossa estratégia multicanal teve de ser financiada com baixo custo, sem afetar a qualidade ou o tempo de chegada ao mercado. A decisão de usar a nuvem AWS, indicação da Concrete Solutions, fez toda a diferença neste sentido.”</p>
