Atualização da página "quem somos", adicionando os Valores da companhia

--- a/quem-somos/index.html
+++ b/quem-somos/index.html
@@ -56,7 +56,7 @@ title: Quem Somos
 		    </div>	
 		</div>
 	</section>
-	<section id="moonlight" class="box">
+	<section id="moonlight" class="box" style="display: none;">
 		<div class="container">
 			<header>
 				<h1 class="title"> Fundo Moonlight</h1>
@@ -77,6 +77,22 @@ title: Quem Somos
 					<p>Em 2012, criamos o Fundo Moonlight para investir em novos empreendimentos idealizados pelos profissionais que atuam na nossa companhia como desenvolvedores. São duas ideias principais: estimular a criação de negócios inovadores por funcionários que  trabalham em seu tempo livre (por isso o "Moonlight") e reter bons talentos. Desta forma surgiram duas empresas: a CloudRetail, especializada em comércio multicanal, e a FIX Support, que oferece suporte em cloud computing.</p>
 				</div>
 			</div>
+		</div>
+	</section>
+	<section id="valores" class="box">
+		<div class="container">
+			<header>
+				<h1 class="title"> Valores</h1>
+			</header>
+			<ul class="marked">
+			    <li>Contribuir continuamente para a excelência dos serviços da empresa;</li>
+			    <li>Valorizar a equipe e estimular o bom ambiente de trabalho;</li>
+			    <li>Ter a consciência de que representa a empresa e agir com integridade, educação e equilíbrio;</li>
+			    <li>Manter uma atitude ética na vida pessoal e profissional;</li>
+			    <li>Comunicar-se abertamente, com franqueza e transparência, com colegas, clientes ou sócios;</li>
+			    <li>Ter visão a médio prazo, sempre;</li>
+			    <li>Não correr a milha extra o tempo todo, mas quando tiver que correr fazer como se sua vida dependesse disso.</li>
+			</ul>
 		</div>
 	</section>
 	<section id="team" class="box box-color">
