Alteracao Ultimas Noticias conforme chamado CSI-3261

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ is_index: true
 			<div class="row">
 			    <div class="col-md-6">
 			    	<header>
-						<h2 class="title-news">"A biblioteca básica para quem quer criar uma startup</h2>
+						<h2 class="title-news">A biblioteca básica para quem quer criar uma startup</h2>
 						<h6 class="author-news">Por: Priscila Zuini - Pequenas Empresas Grandes Negócios</h6>
 					</header>
 					<p>Fernando de la Riva dá as dicas de referências teóricas para quem pensa em abrir uma startup</p>
