Fixes typo "Time Multidisciplinares"

--- a/o-que-fazemos/index.html
+++ b/o-que-fazemos/index.html
@@ -27,7 +27,7 @@ title: O que fazemos
 				<div id="services" class="row">
 					<div class="box-service col-md-3">
 						<div class="row center"><img src="/img/times.png"></div>
-						<h3 class="">Time Multidisciplinares</h3>
+						<h3 class="">Times Multidisciplinares</h3>
 						<p>Usamos times multidisciplinares de alta performance e desenvolvemos web mobile e responsivo, com gestão de conteúdo. </p>
 					</div>
 					<div class="box-service col-md-3">
