alterada a mensagem de testemunho da Dafiti

--- a/clientes/index.html
+++ b/clientes/index.html
@@ -31,7 +31,7 @@ title: Clientes
 						<img src="/img/case-dafiti.jpg" class=" ">
 					</div>
 					<div class="col-md-6 content-text">
-						<p>Em apenas quatro meses, desenvolvemos com o time da Dafiti um novo aplicativo universal (para iOS e Android em tablets e smartphones) de mobile commerce. A loja online tem atuação em vários países da América Latina e um portfólio de 2 mil marcas e 125 mil produtos.  “Em toda a minha vida profissional nunca tive algo tão agressivo e de resultados tão concretos nas mãos. Nosso grau de satisfação com o resultado é muito bom”, destaca Roberto Hengist, gerente de TI da loja.</p>
+						<p>Em apenas quatro meses, a Concrete Solutions nos ajudou a desenvolver um novo aplicativo universal (para iOS e Android em tablets e smartphones) de mobile commerce. Uma API amigável, o uso de analytics e as melhores práticas de segurança da AWS, que possibilitam flexibilidade ao lidar com a demanda dos nossos usuários foram essenciais para o sucesso do projeto. "Em resumo, a Concrete Solutions nos apoiou no desenvolvimento completo da plataforma Mobile que garantiram resultados muitos concretos. Nosso grau de satisfação com o resultado é muito bom.", destaca Roberto Hengist, gerente de TI da loja.</p>
 					</div>
 					<div class="row logo-clients">
 						<img src="/img/logos-midia-clientes.png">
